# mipt-devtech

awk/: reduce.sh  reducer.awk  words.in
build_systems/: CMakeLists.txt  bot
build_systems/B/: main.h
build_systems/task_1/A/: lib.h
build_systems/task_1/B/: main.cpp
build_systems/task_2/: CMakeLists.txt
build_systems/task_2/A/: CMakeLists.txt  lib.cpp
build_systems/task_2/B/: main.h
build_systems/task_2/C/: preparing.py
cmake/: CMakeLists.txt  generate_matrix.py  input.gptf
django/: Dockerfile  README.md  build_and_run.sh  db.sqlite3  manage.py
django/list/: models.py  urls.py  views.py
django/listsi/: settings.py  urls.py  views.py
django/templates/: base.html  queue.html
docker/: run_client.sh  run_server.sh
docker/reader/: Dockerfile  reader.py
docker/storage/: Dockerfile  docker-compose.yml  nohup.out  receiver.py
grafana/: data_parse.py  data_upload_to_graphite.sh  graphite_start.sh  parsed_a.txt  parsed_b.txt
grafana/raw_data/: 1352055.csv
python-dis/: simpledis.py  simpledis_test.py  txt_tst
python-dis/temp/: ex.py  ex2.py
spa/: db.sqlite3  package-lock.json  package.json  webpack.config.js
spa/list_js/: app.js
spa/listsi/: settings.py  urls.py  views.py  wsgi.py
spa/listsi/static/: list.js
spa/notes/: urls.py  views.py
spa/notes/migrations/: 0001_initial.py
spa/templates/: base.html
